align buttons and property elements, fix size

--- a/src/components/css/RecipeBox.css
+++ b/src/components/css/RecipeBox.css
@@ -22,6 +22,7 @@
     background-color: lightgreen !important;
     border-radius: 20px !important;
     margin-right: 10px;
+    font-size: 1rem;
 }
 
 #close-recipe-box {
@@ -60,7 +61,7 @@
 .ingredient-type-recipe-box-div {
     background: rgba(173, 216, 230, 0.5);
     padding: 5px 20px;
-    border-radius: 5px;
+    border-radius: 10px;
     margin-right: 20px;
     margin-bottom: 10px;
 }
@@ -84,15 +85,17 @@
 
 #properties-recipe-box-div {
     display: flex;
+    margin-top: 10px;
 }
 .properties-recipe-box-element {
-    padding: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    padding: 10px;
+    margin-bottom: 5px;
     margin-right: 10px;
     background: rgba(173, 216, 230, 0.5);
-    border-radius: 10px;
-    font-size: 0.75rem;
+    border-radius: 20px;
+    font-size: 1rem;
+    height: 3rem;
+
 }
 #title-recipe-box {
     font-size: 3em;
@@ -107,4 +110,6 @@
     background-color: rgba(173, 216, 230, 0.5) !important;
     border-radius: 20px !important;
     margin-right: 10px;
+    font-size: 1rem;
+    height: 3rem;
 }
